Public/App/Assets/styles.css
body {
  background-image: url('bckground.gif');
}
html {
  font-family: 'Abhaya Libre', serif;
}
.logo {
  font-family: 'Permanent Marker', cursive;
  font-size: 24px;
}
.linkprops {
  text-indent: 1em;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  margin-bottom: 1px;
}
.title {
  font-size: 16px;
  font-weight: bold;
}
.finish {
  font-size: 20px;
  font-style: italic;
}
.post, .white {
  background-color: white;
}
.post:hover {
  background-color: #DCDCDC;
}
.noresults {
  font-size: 24px;
  font-weight: bold;
}
.link:hover {
  text-decoration: underline;
}
/*.link {
  color: red;
}*/

input {
  margin: 0 auto;
}

.nomargin, .post {
  margin: 0 auto;
  background-color: white;

}

